--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
         "setup-project": "npm i",
         "dev": "nodemon server.js",
         "migrate": "node runMigrations.js"
@@ -37,6 +37,8 @@
         "pg": "^8.16.3"
     },
     "devDependencies": {
-        "prettier": "3.6.2"
+        "jest": "^30.1.3",
+        "prettier": "3.6.2",
+        "supertest": "^7.1.4"
     }
 }
