--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-PORT=
-NODE_ENV=
-JWT_SECRET=
-JWT_LIFETIME=
-PGUSER=
-PGHOST=
-PGDATABASE=
-PGPASSWORD=
-PGPORT=
+PORT=3000
+NODE_ENV=development
+JWT_SECRET=secret
+JWT_LIFETIME=24h
+PGUSER=postgres
+PGHOST=db
+PGDATABASE=postgres
+PGPASSWORD=store_app_test
+PGPORT=5432
