--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Wait for Postgres
         run: |
-          until docker compose exec -T db pg_isready -U $PGUSER; do
+          until docker compose exec -T db pg_isready -U postgres; do
             echo "Waiting for Postgres..."
             sleep 2
           done
