--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
             POSTGRES_DB: ${PGDATABASE}
     app:
         build: .
-        image: store-app:ci
+        image: store-app
         ports:
             - 13000:3000
         volumes:
